--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 ---
 language: python
 python:
-  - "2.6"
   - "2.7"
 
 install:
   - pip install tox
 
 script:
-  - tox
+  - tox -e py27
 
 addons:
   apt:
